### Login As 1.9.0 - February 18, 2015 ###
 * Updated for Elgg 1.9 (basically just tested it still works and it does)
 * Added German translations
 * Added Finnish translations

### Login As 1.4 - November 12, 2011 ###
 * Added work around for infinite recursive issue due to Elgg 1.8.0 bug

### Login As 1.3 - November 4, 2011 ###
 * Thanks to Cash Costello for this update!
 * Updated for Elgg 1.8

### Login As 1.2 - April 23, 2011 ###
 * Thanks to Hellekin O. Wolf for these bug fixes!
 * Fixed bugs related to persistent login.
 * Added French translation.

### Login As 1.1 - September 18, 2010 ###
 * Using a new action (logout_as) instead of overriding the logout action
   for logout as.
 * Persistent logins stay for originally logged in users.
 * Logging out as a user doesn't force the real user to be logged out.

### Login As 1.0 - September 12, 2010 ###
 * Initial release.