@@ -24,17 +24,19 @@ if (isset($_COOKIE['elggperm'])) {
 	}
 }
 
-$_SESSION['login_as_original_user_guid'] = $original_user_guid;
-$_SESSION['login_as_original_persistent'] = $persistent;
+$session = elgg_get_session();
+$session->set('login_as_original_user_guid', $original_user_guid);
+$session->set('login_as_original_persistent', $persistent);
 
 try {
 	login($user);
 	system_message(elgg_echo('login_as:logged_in_as_user', array($user->username)));
 } catch (Exception $exc) {
-	unset($_SESSION['login_as_original_user_guid']);
-	unset($_SESSION['login_as_original_persistent']);
+	$session->remove('login_as_original_user_guid');
+	$session->remove('login_as_original_persistent');
+
 	register_error(elgg_echo('login_as:could_not_login_as_user', array($user->username)));
-	
+
 	try {
 		login($original_user);
 	} catch (Exception $ex) {
