@@ -1,3 +1,6 @@
+### Login As 1.9.1 - MMMM DD, 2015 ###
+ * Fixes fatal error on logout
+
 ### Login As 1.9.0 - February 18, 2015 ###
  * Updated for Elgg 1.9 (basically just tested it still works and it does)
  * Added German translations
